--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 manifest {
     name = "getit"
     description = 'Seach for homologs?'
-    homepage = 'Homepage of your project'
+    homePage = 'Homepage of your project'
     version = 0.01
-
+    mainScript      = 'main.nf'
 }
