added som more parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,15 @@
 manifest {
-    name = "getit"
+    name        = "getit"
     description = 'Seach for homologs?'
-    homePage = 'Homepage of your project'
-    version = 0.01
-    mainScript      = 'main.nf'
+    homePage    = 'Homepage of your project'
+    version     = 0.01
+    mainScript  = 'main.nf'
 }
+
+params {
+  threads = 2
+  outdir = "results"
+  help=""
+  ids=''
+}
+
