first complete version

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,9 +7,31 @@ manifest {
 }
 
 params {
-  threads = 2
+  
   outdir = "results"
   help=""
   ids=''
+  sample=-1
 }
 
+
+timeline {
+	enabled = true;
+
+}
+
+report {
+	enabled = true;
+}
+
+executor {
+	name = 'local'
+	cpus = 14
+	memory = '12 GB'
+}
+
+profiles {
+  conda {
+    process.conda = 'bioconda::samtools=1.4.1 bioconda::mafft=7.475 bioconda::hmmer=3.3.1'
+  }
+}
