move conda settings to an env file

--- a/nextflow.config
+++ b/nextflow.config
@@ -32,6 +32,6 @@ executor {
 
 profiles {
   conda {
-    process.conda = 'bioconda::samtools=1.11 bioconda::mafft=7.475 bioconda::hmmer=3.3.1'
+    process.conda = "environment.yml"
   }
 }
