added slurm config

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,9 +25,14 @@ report {
 }
 
 executor {
-	name = 'local'
-	cpus = 14
-	memory = '12 GB'
+  $slurm {
+      queueSize = 25
+  }
+
+  $local {
+      cpus = 8
+      memory = '8 GB'
+  }
 }
 
 profiles {
